--- a/www/assets/styles/custom-styles.css
+++ b/www/assets/styles/custom-styles.css
@@ -5,3 +5,15 @@
 tbody tr:hover {
     background-color: #f4f6f9;
 }
+
+.slds-notify-container {
+    top: inherit;
+    bottom: -80px;
+    -webkit-transition-duration: .4s;
+    transition-duration: .4s;
+}
+
+.slds-notify-container.visible {
+    -webkit-transform: translate3d(0, -60px, 0);
+    transform: translate3d(0, -80px, 0);
+}
